# esmre

./: .gitignore  AUTHORS  INSTALL  MANIFEST.in  Makefile.am  README  README.md  configure.ac  pyproject.toml  setup.py
src/: Makefile.am  ac_heap.c  ac_list.c  ac_list.h  ac_types.h  aho_corasick.c  aho_corasick.h  aho_corasick.pxd  esm.c  esm.py  esm.pyx  esmre.py
src/esm/: ac_list.c  ac_list.h  aho_corasick.c  aho_corasick.h
src/libesm/: ac_list.h  aho_corasick.h
test/: esmre_tests.py  test_esm.py  test_esmre.py
