lib_LTLIBRARIES = libesm.la
libesm_la_SOURCES = ac_heap.c \
                    ac_list.c \
                    aho_corasick.c \
                    ac_list.h \
                    ac_types.h \
                    aho_corasick.h
include_HEADERS = ac_list.h \
                  ac_types.h \
                  aho_corasick.h
