lib_LTLIBRARIES = libesm.la
libesm_la_SOURCES = ac_heap.c \
                    ac_list.c \
                    aho_corasick.c \
                    libesm/ac_list.h \
                    libesm/aho_corasick.h
libesm_la_includedir=$(includedir)/libesm
libesm_la_include_HEADERS = libesm/aho_corasick.h
